--- a/website/Dockerfile
+++ b/website/Dockerfile
@@ -5,6 +5,8 @@ COPY package.json package-lock.json ./
 RUN npm install --frozen-lockfile
 
 COPY . .
+RUN npm run lint
+RUN npm run check
 RUN npm run build
 
 ##################
