--- a/website/package.json
+++ b/website/package.json
@@ -15,6 +15,7 @@
     "@sveltejs/adapter-node": "^1.2.4",
     "@sveltejs/kit": "^1.20.4",
     "autoprefixer": "^10.4.14",
+		"daisyui": "^3.1.6",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte": "^2.30.0",
@@ -28,5 +29,8 @@
     "typescript": "^5.0.0",
     "vite": "^4.3.6"
   },
-  "type": "module"
+  "type": "module",
+	"dependencies": {
+		"theme-change": "^2.5.0"
+	}
 }
