--- a/website/package.json
+++ b/website/package.json
@@ -19,10 +19,12 @@
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte": "^2.30.0",
+    "marked": "^5.1.0",
     "pocketbase": "^0.15.2",
     "postcss": "^8.4.24",
     "prettier": "^2.8.0",
     "prettier-plugin-svelte": "^2.10.1",
+    "sanitize-html": "^2.11.0",
     "svelte": "^4.0.0",
     "svelte-check": "^3.4.3",
     "tailwindcss": "^3.3.2",
