--- a/website/package.json
+++ b/website/package.json
@@ -20,6 +20,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte": "^2.30.0",
     "marked": "^5.1.0",
+    "minidenticons": "^4.2.0",
     "pocketbase": "^0.15.2",
     "postcss": "^8.4.24",
     "prettier": "^2.8.0",
