change markdown parser and add support for ids

--- a/website/package.json
+++ b/website/package.json
@@ -19,10 +19,14 @@
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte": "^2.30.0",
-    "marked": "^5.1.0",
+    "github-slugger": "^2.0.0",
+    "highlight.js": "^11.8.0",
+    "markdown-it": "^13.0.1",
+    "markdown-it-github-headings": "^2.0.1",
     "minidenticons": "^4.2.0",
     "pocketbase": "^0.15.2",
     "postcss": "^8.4.24",
+    "postcss-nesting": "^11.3.0",
     "prettier": "^2.8.0",
     "prettier-plugin-svelte": "^2.10.1",
     "sanitize-html": "^2.11.0",
