--- a/website/package.json
+++ b/website/package.json
@@ -32,6 +32,7 @@
     "sanitize-html": "^2.11.0",
     "svelte": "^4.0.0",
     "svelte-check": "^3.4.3",
+    "svelte-meta-tags": "^2.8.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.0",
     "vite": "^4.3.6"
