--- a/website/package.json
+++ b/website/package.json
@@ -37,5 +37,8 @@
     "typescript": "^5.0.0",
     "vite": "^4.3.6"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "feed": "^4.2.2"
+  }
 }
