--- a/website/package.json
+++ b/website/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@sveltejs/adapter-node": "^1.2.4",
     "@sveltejs/kit": "^1.20.4",
+    "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.14",
     "daisyui": "^3.1.6",
     "eslint": "^8.28.0",
