--- a/website/.env
+++ b/website/.env
@@ -1,1 +1,3 @@
 PUBLIC_POCKETBASE_PAGEURL="http://localhost" # set to server url for login // server side use of pocketbase
+
+MESSAGES_WEBHOOK_URL="https://discord.com/api/webhooks/"
