--- a/website/package.json
+++ b/website/package.json
@@ -20,6 +20,7 @@
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte": "^2.30.0",
+    "feed": "^4.2.2",
     "github-slugger": "^2.0.0",
     "highlight.js": "^11.8.0",
     "markdown-it": "^13.0.1",
@@ -38,8 +39,5 @@
     "typescript": "^5.0.0",
     "vite": "^4.3.6"
   },
-  "type": "module",
-  "dependencies": {
-    "feed": "^4.2.2"
-  }
+  "type": "module"
 }
