--- a/website/.dockerignore
+++ b/website/.dockerignore
@@ -6,3 +6,8 @@ node_modules
 .env.example
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+Dockerfile
+.gitignore
+.dockerignore
+README.md
