--- a/website/package.json
+++ b/website/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "vite dev",
+    "dev": "CHOKIDAR_USEPOLLING=true vite dev",
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
@@ -12,7 +12,6 @@
     "format": "prettier --plugin-search-dir . --write ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-node": "^1.2.4",
     "@sveltejs/kit": "^1.20.4",
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.14",
@@ -33,6 +32,7 @@
     "prettier-plugin-svelte": "^2.10.1",
     "sanitize-html": "^2.11.0",
     "svelte": "^4.0.0",
+    "svelte-adapter-bun": "^0.4.4",
     "svelte-check": "^3.4.3",
     "svelte-meta-tags": "^2.8.0",
     "tailwindcss": "^3.3.2",
