--- a/website/package.json
+++ b/website/package.json
@@ -37,7 +37,8 @@
     "svelte-meta-tags": "^2.8.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.0",
-    "vite": "^4.3.6"
+    "vite": "^4.3.6",
+    "ws": "^8.13.0"
   },
   "type": "module"
 }
